; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_list.c_list_engines.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_list.c_list_engines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bio_out = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"Engines:\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @list_engines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @list_engines() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @bio_out, align 4
  %3 = call i32 @BIO_puts(i32 %2, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %4 = call i32* (...) @ENGINE_get_first()
  store i32* %4, i32** %1, align 8
  br label %5

5:                                                ; preds = %8, %0
  %6 = load i32*, i32** %1, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %5
  %9 = load i32, i32* @bio_out, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @ENGINE_get_id(i32* %10)
  %12 = call i32 @BIO_printf(i32 %9, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32* @ENGINE_get_next(i32* %13)
  store i32* %14, i32** %1, align 8
  br label %5

15:                                               ; preds = %5
  ret void
}

declare dso_local i32 @BIO_puts(i32, i8*) #1

declare dso_local i32* @ENGINE_get_first(...) #1

declare dso_local i32 @BIO_printf(i32, i8*, i32) #1

declare dso_local i32 @ENGINE_get_id(i32*) #1

declare dso_local i32* @ENGINE_get_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
